# Sentinel-Custody-Engine

./: .env.example  .gitignore  README.md  alembic.ini  audit.html  dashboard.html  docker-compose.yml  multidb.html  plan.md  pyproject.toml
.obsidian/: workspace.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_transaction_audit_logs.py
docs/superpowers/plans/: 2026-04-27-sentinel-custody-engine.md
scripts/: reset_demo.py
src/: config.py  database.py  main.py
src/auditor/: audit_log.py  indexer.py  reconciler.py
src/gatekeeper/: admin_router.py  multidb_router.py  policy.py  router.py  schemas.py
src/models/: __init__.py  audit.py  ledger.py  whitelist.py
src/orchestrator/: break_glass.py  broadcast.py  ethereum_signing.py  key_sharding.py  lifecycle.py  nonce.py  record_demo.py  signing.py  transaction_builder.py  worker.py
tests/: conftest.py  test_admin_api.py  test_audit_log.py  test_break_glass.py  test_broadcast.py  test_config.py  test_db_sepolia_lifecycle_e2e.py  test_ethereum_lifecycle.py  test_ethereum_signing.py  test_indexer.py  test_key_sharding.py  test_lifecycle.py  test_lifecycle_db_e2e.py  test_models.py  test_policy.py  test_reconciler.py  test_sepolia_broadcast_integration.py  test_signing.py  test_transaction_builder.py  test_web3_rpc_integration.py  test_withdrawal_api.py  test_worker.py
